--- a/.bowerrc
+++ b/.bowerrc
@@ -1,5 +1,3 @@
 {
-  "registry": "https://bower.cloud.capitalone.com",
-  "strict-ssl": false,
-  "timeout": 30000
+  "registry": "https://bower.herokuapp.com"
 }
